
The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

toc::[]

== Unreleased
These changes are merged into the `main` branch but have not yet been tagged as a new version/release.

==== Breaking

==== Added
* `FilterRows::AnyFieldsPopulated` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `ignore_case` parameter to `FilterRows::FieldMatchRegexp` transform. Defaults to `false` for backward compatibility. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `Merge::ConstantValues` transform added. In https://github.com/lyrasis/kiba-extend/pull/84[PR#84]

==== Changed
* `Merge::ConstantValue` warns (once per transform) if `target` is an existing field containing any data. In https://github.com/lyrasis/kiba-extend/pull/84[PR#84]
* BUGFIX: `RowSorter` checks for presence of `sortfield` and raises error if it doesn't exist, rather than trying to proceed and blowing up. In https://github.com/lyrasis/kiba-extend/pull/83[PR#83]

==== Deleted

==== To be deprecated/Will break in a future version

== Releases
=== 2.8.0 - 2022-05-13
https://github.com/lyrasis/kiba-extend/compare/v2.7.2\...v2.8.0[Compare code changes]

==== Breaking
* `Count::MatchingRowsInLookup` previously returned Integers. Now it defaults to returning Strings, since many of the transforms assume all field values will be strings. If you were calling `Count::MatchingRowsInLookup` in a job and working with the integer result as an integer within that job, this will be a breaking change. In https://github.com/lyrasis/kiba-extend/pull/69[PR#69]

==== Added
* `Lookup::RowSorter` class and the ability to pass it in as an argument to `Merge::MultiRowLookup` transform to explicitly control the order in which matching rows are merged. In https://github.com/lyrasis/kiba-extend/pull/82[PR#82]